--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <td><button>C</button></td>
                 <td><button>0</button></td>
                 <td><button>.</button></td>
-                <td><button>%</button></td>
+                <td><button>/</button></td>
                 
             </tr>
             <tr>
